@@ -23,188 +23,150 @@ import org.hyperledger.besu.evm.gascalculator.GasCalculator;
 import org.hyperledger.besu.evm.gascalculator.SpuriousDragonGasCalculator;
 import org.hyperledger.besu.evm.operation.SarOperation;
 
-import java.util.Arrays;
+import java.util.List;
 
 import org.apache.tuweni.bytes.Bytes;
 import org.apache.tuweni.bytes.Bytes32;
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.junit.runners.Parameterized;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 
-@RunWith(Parameterized.class)
-public class SarOperationTest {
-
-  private final String number;
-  private final String shift;
-  private final String expectedResult;
+class SarOperationTest {
 
   private final GasCalculator gasCalculator = new SpuriousDragonGasCalculator();
   private final SarOperation operation = new SarOperation(gasCalculator);
 
-  private static final String[][] testData = {
-    {
-      "0x0000000000000000000000000000000000000000000000000000000000000001",
-      "0x00",
-      "0x0000000000000000000000000000000000000000000000000000000000000001"
-    },
-    {
-      "0x0000000000000000000000000000000000000000000000000000000000000001",
-      "0x01",
-      "0x0000000000000000000000000000000000000000000000000000000000000000"
-    },
-    {
-      "0x0000000000000000000000000000000000000000000000000000000000000002",
-      "0x01",
-      "0x0000000000000000000000000000000000000000000000000000000000000001"
-    },
-    {
-      "0x0000000000000000000000000000000000000000000000000000000000000004",
-      "0x01",
-      "0x0000000000000000000000000000000000000000000000000000000000000002"
-    },
-    {
-      "0x000000000000000000000000000000000000000000000000000000000000000f",
-      "0x01",
-      "0x0000000000000000000000000000000000000000000000000000000000000007"
-    },
-    {
-      "0x0000000000000000000000000000000000000000000000000000000000000008",
-      "0x01",
-      "0x0000000000000000000000000000000000000000000000000000000000000004"
-    },
-    {
-      "0x8000000000000000000000000000000000000000000000000000000000000000",
-      "0x01",
-      "0xc000000000000000000000000000000000000000000000000000000000000000"
-    },
-    {
-      "0x8000000000000000000000000000000000000000000000000000000000000000",
-      "0xff",
-      "0xffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff"
-    },
-    {
-      "0x8000000000000000000000000000000000000000000000000000000000000000",
-      "0x100",
-      "0xffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff"
-    },
-    {
-      "0x8000000000000000000000000000000000000000000000000000000000000000",
-      "0x101",
-      "0xffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff"
-    },
-    {
-      "0xffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff",
-      "0x0",
-      "0xffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff"
-    },
-    {
-      "0xffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff",
-      "0x01",
-      "0xffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff"
-    },
-    {
-      "0xffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff",
-      "0xff",
-      "0xffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff"
-    },
-    {
-      "0xffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff",
-      "0x100",
-      "0xffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff"
-    },
-    {
-      "0x0000000000000000000000000000000000000000000000000000000000000000",
-      "0x01",
-      "0x0000000000000000000000000000000000000000000000000000000000000000"
-    },
-    {
-      "0x4000000000000000000000000000000000000000000000000000000000000000",
-      "0xfe",
-      "0x0000000000000000000000000000000000000000000000000000000000000001"
-    },
-    {
-      "0x7fffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff",
-      "0xf8",
-      "0x000000000000000000000000000000000000000000000000000000000000007f"
-    },
-    {
-      "0x7fffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff",
-      "0xfe",
-      "0x0000000000000000000000000000000000000000000000000000000000000001"
-    },
-    {
-      "0x7fffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff",
-      "0xff",
-      "0x0000000000000000000000000000000000000000000000000000000000000000"
-    },
-    {"0x7fffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff", "0x100", "0x"},
-    {
-      "0x0000000000000000000000000000000000000000000000000000000000000400",
-      "0x80",
-      "0x0000000000000000000000000000000000000000000000000000000000000000"
-    },
-    {"0x0000000000000000000000000000000000000000000000000000000000000400", "0x8000", "0x"},
-    {"0x0000000000000000000000000000000000000000000000000000000000000400", "0x80000000", "0x"},
-    {
-      "0x0000000000000000000000000000000000000000000000000000000000000400",
-      "0x8000000000000000",
-      "0x"
-    },
-    {
-      "0x0000000000000000000000000000000000000000000000000000000000000400",
-      "0x80000000000000000000000000000000",
-      "0x"
-    },
-    {
-      "0x0000000000000000000000000000000000000000000000000000000000000400",
-      "0x8000000000000000000000000000000000000000000000000000000000000000",
-      "0x"
-    },
-    {
-      "0x8000000000000000000000000000000000000000000000000000000000000400",
-      "0x80",
-      "0xffffffffffffffffffffffffffffffff80000000000000000000000000000000"
-    },
-    {
-      "0x8000000000000000000000000000000000000000000000000000000000000400",
-      "0x8000",
-      "0xffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff"
-    },
-    {
-      "0x8000000000000000000000000000000000000000000000000000000000000400",
-      "0x80000000",
-      "0xffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff"
-    },
-    {
-      "0x8000000000000000000000000000000000000000000000000000000000000400",
-      "0x8000000000000000",
-      "0xffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff"
-    },
-    {
-      "0x8000000000000000000000000000000000000000000000000000000000000400",
-      "0x80000000000000000000000000000000",
-      "0xffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff"
-    },
-    {
-      "0x8000000000000000000000000000000000000000000000000000000000000400",
-      "0x8000000000000000000000000000000000000000000000000000000000000000",
-      "0xffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff"
-    },
-  };
-
-  @Parameterized.Parameters(name = "{index}: {0}, {1}, {2}")
-  public static Iterable<String[]> data() {
-    return Arrays.asList(testData);
+  static Iterable<Arguments> data() {
+    return List.of(
+        Arguments.of(
+            "0x0000000000000000000000000000000000000000000000000000000000000001",
+            "0x00",
+            "0x0000000000000000000000000000000000000000000000000000000000000001"),
+        Arguments.of(
+            "0x0000000000000000000000000000000000000000000000000000000000000001",
+            "0x01",
+            "0x0000000000000000000000000000000000000000000000000000000000000000"),
+        Arguments.of(
+            "0x0000000000000000000000000000000000000000000000000000000000000002",
+            "0x01",
+            "0x0000000000000000000000000000000000000000000000000000000000000001"),
+        Arguments.of(
+            "0x0000000000000000000000000000000000000000000000000000000000000004",
+            "0x01",
+            "0x0000000000000000000000000000000000000000000000000000000000000002"),
+        Arguments.of(
+            "0x000000000000000000000000000000000000000000000000000000000000000f",
+            "0x01",
+            "0x0000000000000000000000000000000000000000000000000000000000000007"),
+        Arguments.of(
+            "0x0000000000000000000000000000000000000000000000000000000000000008",
+            "0x01",
+            "0x0000000000000000000000000000000000000000000000000000000000000004"),
+        Arguments.of(
+            "0x8000000000000000000000000000000000000000000000000000000000000000",
+            "0x01",
+            "0xc000000000000000000000000000000000000000000000000000000000000000"),
+        Arguments.of(
+            "0x8000000000000000000000000000000000000000000000000000000000000000",
+            "0xff",
+            "0xffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff"),
+        Arguments.of(
+            "0x8000000000000000000000000000000000000000000000000000000000000000",
+            "0x100",
+            "0xffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff"),
+        Arguments.of(
+            "0x8000000000000000000000000000000000000000000000000000000000000000",
+            "0x101",
+            "0xffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff"),
+        Arguments.of(
+            "0xffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff",
+            "0x0",
+            "0xffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff"),
+        Arguments.of(
+            "0xffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff",
+            "0x01",
+            "0xffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff"),
+        Arguments.of(
+            "0xffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff",
+            "0xff",
+            "0xffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff"),
+        Arguments.of(
+            "0xffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff",
+            "0x100",
+            "0xffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff"),
+        Arguments.of(
+            "0x0000000000000000000000000000000000000000000000000000000000000000",
+            "0x01",
+            "0x0000000000000000000000000000000000000000000000000000000000000000"),
+        Arguments.of(
+            "0x4000000000000000000000000000000000000000000000000000000000000000",
+            "0xfe",
+            "0x0000000000000000000000000000000000000000000000000000000000000001"),
+        Arguments.of(
+            "0x7fffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff",
+            "0xf8",
+            "0x000000000000000000000000000000000000000000000000000000000000007f"),
+        Arguments.of(
+            "0x7fffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff",
+            "0xfe",
+            "0x0000000000000000000000000000000000000000000000000000000000000001"),
+        Arguments.of(
+            "0x7fffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff",
+            "0xff",
+            "0x0000000000000000000000000000000000000000000000000000000000000000"),
+        Arguments.of(
+            "0x7fffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff", "0x100", "0x"),
+        Arguments.of(
+            "0x0000000000000000000000000000000000000000000000000000000000000400",
+            "0x80",
+            "0x0000000000000000000000000000000000000000000000000000000000000000"),
+        Arguments.of(
+            "0x0000000000000000000000000000000000000000000000000000000000000400", "0x8000", "0x"),
+        Arguments.of(
+            "0x0000000000000000000000000000000000000000000000000000000000000400",
+            "0x80000000",
+            "0x"),
+        Arguments.of(
+            "0x0000000000000000000000000000000000000000000000000000000000000400",
+            "0x8000000000000000",
+            "0x"),
+        Arguments.of(
+            "0x0000000000000000000000000000000000000000000000000000000000000400",
+            "0x80000000000000000000000000000000",
+            "0x"),
+        Arguments.of(
+            "0x0000000000000000000000000000000000000000000000000000000000000400",
+            "0x8000000000000000000000000000000000000000000000000000000000000000",
+            "0x"),
+        Arguments.of(
+            "0x8000000000000000000000000000000000000000000000000000000000000400",
+            "0x80",
+            "0xffffffffffffffffffffffffffffffff80000000000000000000000000000000"),
+        Arguments.of(
+            "0x8000000000000000000000000000000000000000000000000000000000000400",
+            "0x8000",
+            "0xffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff"),
+        Arguments.of(
+            "0x8000000000000000000000000000000000000000000000000000000000000400",
+            "0x80000000",
+            "0xffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff"),
+        Arguments.of(
+            "0x8000000000000000000000000000000000000000000000000000000000000400",
+            "0x8000000000000000",
+            "0xffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff"),
+        Arguments.of(
+            "0x8000000000000000000000000000000000000000000000000000000000000400",
+            "0x80000000000000000000000000000000",
+            "0xffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff"),
+        Arguments.of(
+            "0x8000000000000000000000000000000000000000000000000000000000000400",
+            "0x8000000000000000000000000000000000000000000000000000000000000000",
+            "0xffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff"));
   }
 
-  public SarOperationTest(final String number, final String shift, final String expectedResult) {
-    this.number = number;
-    this.shift = shift;
-    this.expectedResult = expectedResult;
-  }
-
-  @Test
-  public void shiftOperation() {
+  @ParameterizedTest(name = "{index}: {0}, {1}, {2}")
+  @MethodSource("data")
+  void shiftOperation(final String number, final String shift, final String expectedResult) {
     final MessageFrame frame = mock(MessageFrame.class);
     when(frame.stackSize()).thenReturn(2);
     when(frame.getRemainingGas()).thenReturn(100L);
